--- a/src/components/Basket/BasketMobile.css
+++ b/src/components/Basket/BasketMobile.css
@@ -24,8 +24,25 @@
     display: flex;
     flex-direction: column;
 }
+.basketMobile-ExitButton {
+    display: flex;
+    position: absolute;
+    align-items: center;
+    right: 20px;
+    height: 60px;
+    height: 60px;
+    transition: 0.1s;
+    opacity: 0.8;
+}
+.basketMobile-ExitButton img {
+    width: 35px;
+    height: 35px;
+}
+.basketMobile-ExitButton:hover {
+    opacity: 1;
+}
 .basketMobile-Box h1 {
-    background-color: rgb(25, 25, 129);
+    background-color: rgb(69, 160, 179);
     color: white;
     width: 100%;
     height: 60px;
@@ -77,15 +94,16 @@
     font-size: 25px;
 }
 .basketMobile-ProductAmount1 p:nth-child(1) {
-    background-color: rgb(25, 25, 129);
+    background-color: rgb(69, 160, 179);
     color: white;
 }
 .basketMobile-ProductAmount1 p:nth-child(2) {
     background-color: white;
+    color: rgb(48, 102, 112);
 }
 .basketMobile-ProductAmount1 p:nth-child(3) {
     background-color: white;
-    border: solid rgb(25, 25, 129) 2px;
+    border: solid rgb(69, 160, 179) 2px;
 }
 .basketMobile-Checkout {
     position: absolute;
@@ -102,7 +120,7 @@
     height: 100px;
     width: 100%;
     background-color: white;
-    color: black;
+    color: rgb(39, 82, 90);
     font-size: 40px;
     font-weight: normal;
 }
@@ -112,7 +130,7 @@
     height: 60px;
     font-size: 25px;
     font-weight: bold;
-    background-color: rgb(25, 25, 129);
+    background-color: rgb(69, 160, 179) ;
     color: white;
     border: none;
     display: flex;
@@ -127,7 +145,7 @@
     width: 40px;
     height: 40px;
 }
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 450px) {
     .basketMobile-Product {
         justify-content: flex-start;
     }
